welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: not found: value nums
    if (nums(i)!=num(i+1)){
        ^island:5: error: not found: value nivaux
      nivaux=niveaux+1
      ^